--- a/appoperaciones/templates/appoperaciones/busqueda.html
+++ b/appoperaciones/templates/appoperaciones/busqueda.html
@@ -3,15 +3,20 @@
 
 {% load static %}
 
+{% block contenidoQueCambia %}
+
 {% block title %} Buscar Asistente {% endblock title %}
 
-{% block main %}
+
     <form action="" method="POST">
         {% csrf_token %}
         <table>
             {{ miFormulario.as_table }}
         </table>
         <input type="submit" value="Enviar">
-
+        
     </form>
-{% endblock main %}
+
+{% endblock %}
+
+
