--- a/appoperaciones/templates/appoperaciones/resultado.html
+++ b/appoperaciones/templates/appoperaciones/resultado.html
@@ -1,17 +1,21 @@
 {% extends 'appoperaciones/base.html' %}
 
-{% load static %}
+{% block contenidoQueCambia %}
 
-{% block title %} Inicio {% endblock title %}
 
-{% block main %}
-    <!-- action: representa la url a la que nos va a re-dirigir. Tiene prioridad
-    por sobre la redirección que podamos colocar en views.py -->
+
+{% block title %} ASISTENTES {% endblock %}
+
     <ul>
         {% for asistente in asistentes %}
         <li> {{ asistente.nombre }} | {{ asistente.apellido }} </li>
         {% endfor %}
     </ul>
-{% endblock main %}
+
+{% endblock  %}
+
+
+
+   
 
 
