--- a/appoperaciones/templates/appoperaciones/nosotros.html
+++ b/appoperaciones/templates/appoperaciones/nosotros.html
@@ -5,5 +5,14 @@
 {% block title %} NOSOTROS {% endblock %}
 
 
-<h1>Breve descripción sobre la página.</h1>
+<h3>Breve descripción sobre la página:</h3>
+<h5> Hola soy Daniel Yauny y gracias a este curso de Python pude realizar esta página, que a decir verdad me costo bastante, ya que si bién había estudiado algo de programación hace muuucho tiempo,
+    desde entoces me desempeño en otro rubro y como sabemos los cambios son vertiginosos. Hoy me encuentro agradecido de poder realizar este Proyecto Final atraido por la necesidad de aprender
+     y volver a esto de la programación. Seguiré realizando otros cursos, así seguir incrementando el conocimiento en programación.
+    Gracias a los profesores y tutores.
+    Espero que la página este al nivel de lo solicitado.
+
+    Saludos.
+
+</h5>
 {% endblock %}
