--- a/appoperaciones/templates/appoperaciones/base.html
+++ b/appoperaciones/templates/appoperaciones/base.html
@@ -24,11 +24,43 @@
                 <a class="navbar-brand" href="{% url 'inicio' %}">Inicio</a>
                 <a class="navbar-brand" href="{% url 'nosotros' %}">Nosotros</a>
                 <a class="navbar-brand" href="{% url 'Lista' %}">Asistentes</a> 
-                <a class="navbar-brand" href="{% url 'camarografos' %}">Camarografos</a>
-                <a class="navbar-brand" href="{% url 'microfonistas' %}">Microfonistas</a> 
-                <a class="btn btn-primary" href="{% url 'Login' %}">Login</a>
+                <a class="navbar-brand" href="{% url 'CamarografoLista' %}">Camarografos</a>
+                <a class="navbar-brand" href="{% url 'MicrofonistaLista' %}">Microfonistas</a> 
+                <!--<a class="btn btn-primary" href="{% url 'Login' %}">Login</a>
                 <a class="btn btn-primary" href="{% url 'Register' %}">Registro</a>
-                <a class="btn btn-primary" href="{% url 'Logout' %}">Logout</a>
+                <a class="btn btn-primary" href="{% url 'Logout' %}">Logout</a>-->
+
+                {# DROPDOWN PARA LA CUENTA DE USUARIO #}
+                {% if request.user.is_authenticated %}
+                    <img src="{{request.user.avatar.imagen.url}}" alt="" style="height: 50px;width: 50px;">
+                    <div class="dropdown">
+                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                            {{ request.user.username }}
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                            {% if request.user.is_authenticated %}
+                                <li><a class="dropdown-item" href="{% url 'editarperfil' %}">Editar cuenta</a></li>
+                                <li><a class="dropdown-item" href="{% url 'Logout' %}">Cerrar sesión</a></li>
+                             {% else %}
+                                <li><a class="dropdown-item" href="{% url 'editarperfil' %}">Editar cuenta</a></li>
+                                <li><a class="dropdown-item" href="{% url 'Logout' %}">Cerrar sesión</a></li>
+                            {% endif %}
+                        </ul>
+                    </div>
+            
+                {% else %}
+
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                            Cuenta
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                            <li><a class="dropdown-item" href="{% url 'Login' %}">Inciar Sesión</a></li>
+                            <li><a class="dropdown-item" href="{% url 'Register' %}">Crear cuenta</a></li>
+                        </ul>
+                    </div>
+                {% endif %}
+
                  
                 
             </div>
@@ -89,11 +121,11 @@
                             <li class="list-inline-item">⋅</li>
                             <li class="list-inline-item"><a href="{% url 'nosotros' %}">Nosotros</a></li>
                             <li class="list-inline-item">⋅</li>
-                            <li class="list-inline-item"><a href="{% url 'asistentes' %}">Asistentes</a></li>
+                            <li class="list-inline-item"><a href="{% url 'Lista' %}">Asistentes</a></li>
                             <li class="list-inline-item">⋅</li>
-                            <li class="list-inline-item"><a href="{% url 'camarografos' %}">Camarografos</a></li>
+                            <li class="list-inline-item"><a href="{% url 'CamarografoLista' %}">Camarografos</a></li>
                             <li class="list-inline-item">⋅</li>
-                            <li class="list-inline-item"><a href="{% url 'microfonistas' %}">Microfonistas</a></li>
+                            <li class="list-inline-item"><a href="{% url 'MicrofonistaLista' %}">Microfonistas</a></li>
                             <li class="list-inline-item">⋅</li>
                             
                         </ul>
