--- a/appoperaciones/templates/appoperaciones/Vistas_Clases/asistentes_detalle.html
+++ b/appoperaciones/templates/appoperaciones/Vistas_Clases/asistentes_detalle.html
@@ -11,7 +11,7 @@
 <p>Legajo: <i>{{ asistentes.legajo }}</i></p>
 
 <p>
-    <a href="{% url 'Lista' %}">Regresar</a>
+    <a href="{% url 'Lista' %}">Volver</a>
 </p>
 
 {% endblock %}
