--- a/appoperaciones/templates/appoperaciones/Vistas_Clases/microfonistas_detalle.html
+++ b/appoperaciones/templates/appoperaciones/Vistas_Clases/microfonistas_detalle.html
@@ -11,7 +11,7 @@
 <p>Legajo: <i>{{ microfonistas.legajo }}</i></p>
 
 <p>
-    <a href="{% url 'MicrofonistaLista' %}">Regresar</a>
+    <a href="{% url 'MicrofonistaLista' %}">Volver</a>
 </p>
 
 {% endblock %}
