--- a/appoperaciones/templates/appoperaciones/Vistas_Clases/asistentes_crear.html
+++ b/appoperaciones/templates/appoperaciones/Vistas_Clases/asistentes_crear.html
@@ -6,6 +6,7 @@
 
     <form action="" method="POST">
        {% csrf_token %}
+       <a href="{%  url 'Lista' %}">Volver</a>
        <table>
         {{ form.as_table }}
        </table>
