--- a/appoperaciones/templates/appoperaciones/Vistas_Clases/camarografos_actualizar.html
+++ b/appoperaciones/templates/appoperaciones/Vistas_Clases/camarografos_actualizar.html
@@ -6,6 +6,7 @@
 
     <form action="" method="POST">
        {% csrf_token %}
+       <a href="{%  url 'CamarografoLista' %}">Volver</a>
        <table>
         {{ form.as_table }}
        </table>
